--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,6 @@
 /*fuentes*/
 
 body {
-	align-content:center;
 	width:90%;
 	margin:10%;
 	font-family: 'Aguafina Script', cursive;
@@ -27,13 +26,14 @@ header {
 }
 
 header h1{
-	font-size: 1.7em;
+	font-size: 2em;
 	text-shadow: 2px 2px 2px #02010a ; 
 	word-spacing: 3px;
 	letter-spacing: 2px;
 	
 	}
 #nav {
+  font-size: 1.5em;
   padding-top: 30px; 
   float: right;
   width: 20%;
@@ -50,16 +50,17 @@ a{
 }
 section {
 	
-	width: 880px;
-	align-content: center;
+	width:100%;
+	background-color:#82c3a6;
+	
 	
 }
 #img1 {
-	padding:10px;
-	
-	width:100%;
+	padding-top: 10px;
+	padding-left: 15%;
+	width:auto;
 	height:auto;
-	background-color:#82c3a6;
+	
 	
 	
 }
