--- a/css/estilos.css
+++ b/css/estilos.css
@@ -91,24 +91,37 @@ align-items: center;
 	
 }
 
-section {
-	
-	
-	
-	
-	
-	
+.contenido{
+	width: 100%;
+	height: 460px;
+	flex-direction:column;!important
+	margin: 0px  ;
+	padding: 2px 2px ;
+	background-color:#d5c75f ;
 }
-
-
-
-
+.contenido img{
+	border: 1px solid black;
+}
 
 #img2{
-	
-	
-	background-color:  #d5c75f ;
+	float:left;
+	position: relative;
+	left:10px;	
+   
+}
+ #img2 a img:hover {
+	transform:rotate(10deg);
+	box-shadow:3px #82c3a6 ;
+	border: 2px solid black;
 }
 #img3 {
-	background-color:  #d5c75f ;
+	float:right;
+	position:relative;
+	right:11px;
+}
+
+ #img3 a img:hover {
+	transform:translate(20px,-5px);
+	
+	box-shadow:3px #82c3a6 ;
 }
