--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
 @font-face {
-	src: url(../fuentes/Aguafina-Script)
+	src: url(../fuentes/Aguafina-Script);
+	src: url(../fuentes/Aguafina-Script);
 }
 /*fuentes*/
 
 body {
 	background-color:black;
-	font-family: 'Aguafina Script', cursive;
+	/*font-family: 'Aguafina Script', cursive;*/
+	font-family: 'Dancing Script';
+	font-style: italic;
 	color:white;
 	width:900px;
 	margin-left:10px;
@@ -33,14 +36,13 @@ header {
 #titulo {
 	float:left;
 	text-shadow: 2px 2px 2px #02010a;
+	word-spacing:4px;
+	letter-spacing:3px;
 	
 	
 }
 
-header h1{
-	
-	
-	}
+
 #nav {
 	height: 100%;
 	padding-top: 20px;
@@ -96,7 +98,7 @@ align-items: center;
 	height: 460px;
 	flex-direction:column;!important
 	margin: 0px  ;
-	padding: 2px 2px ;
+	padding: 10px 0px ;
 	background-color:#d5c75f ;
 }
 .contenido img{
@@ -124,4 +126,11 @@ align-items: center;
 	transform:translate(20px,-5px);
 	
 	box-shadow:3px #82c3a6 ;
+}
+
+footer{
+	width:100%;
+	height:200px;
+	background-color:#C6d5c5;
+	border-radius: 0px 0px 10px 10px;
 }
