--- a/css/estilos.css
+++ b/css/estilos.css
@@ -96,6 +96,7 @@ align-items: center;
 .contenido{
 	width: 100%;
 	height: 460px;
+	/*display: flex;*/
 	flex-direction:column;!important
 	margin: 0px  ;
 	padding: 10px 0px ;
@@ -111,7 +112,7 @@ align-items: center;
 	left:10px;	
    
 }
- #img2 a img:hover {
+#img2 a img:hover {
 	transform:rotate(10deg);
 	box-shadow:3px #82c3a6 ;
 	border: 2px solid black;
@@ -130,7 +131,36 @@ align-items: center;
 
 footer{
 	width:100%;
-	height:200px;
+	height:auto;
 	background-color:#C6d5c5;
 	border-radius: 0px 0px 10px 10px;
+	display:flex;
+	flex-direction:row;
+	color: black;
+}
+footer div{
+	padding: 10px;
+    margin: 25px;
+    border: none;
+	width: 25%;
+}
+footer h2{
+	text-align: center;
+	word-spacing: 4px;
+	letter-spacing: 3px;
+}
+
+footer #redes a {
+	text-decoration: none;
+	color:black;
+}
+
+footer #redes p img{
+	margin-right:6px; 
+	width:15px;
+	
+}
+footer #redes p img:hover{
+	transform:rotate(5deg);
+	
 }
