--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 @font-face {
 	src: url(../fuentes/Aguafina-Script);
-	src: url(../fuentes/Aguafina-Script);
+	src: url(../fuentes/Dancing-Script);
 }
 /*fuentes*/
 
@@ -82,7 +82,7 @@ li a{
 #img1 {
 	
     height:330px;
-	padding: 0px 12px;
+	padding: 10px 12px 0px 6px;
 	background:#82c3a6;
 	
 	
@@ -95,7 +95,7 @@ align-items: center;
 
 .contenido{
 	width: 100%;
-	height: 460px;
+	height: 500px;
 	/*display: flex;*/
 	flex-direction:column;!important
 	margin: 0px  ;
@@ -104,6 +104,12 @@ align-items: center;
 }
 .contenido img{
 	border: 1px solid black;
+}
+.contenido h2{
+	text-align: center;
+	text-decoration: underline;
+	color:black;
+	
 }
 
 #img2{
