--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,6 @@ body {
 	font-family: 'Dancing Script';
 	font-style: italic;
 	color:white;
-	width:900px;
 	margin-left:10px;
 	
 }
@@ -22,14 +21,18 @@ body img{
 	box-shadow: 2px 2px 2px 2px #02010a;
 	
 }
+container { 
+	background-color: aqua; 
+}
 header {
 	 
-  width: 100%;
+  width: 900px;
   height: 80px;
   position:inherit;
   top: 10;
   background-color: #5b7989;
   border-radius: 10px 10px 0px 0px;
+	margin: auto;
 	
 	
 }
@@ -37,15 +40,14 @@ header {
 	float:left;
 	text-shadow: 2px 2px 2px #02010a;
 	word-spacing:4px;
-	letter-spacing:3px;
-	
-	
+	letter-spacing:3px;	
+	padding-left: 10px;
 }
 
 
 #nav {
 	height: 100%;
-	padding-top: 20px;
+	padding:20px 10px 0 0;
 	
   	
 }
@@ -75,7 +77,8 @@ li a{
 }
 /*pagina de inicio*/
 .contenedor{
-	width: 100%;
+	width: 900px;
+	margin: auto;
 	flex-direction:row;
 	
 }
@@ -85,9 +88,6 @@ li a{
     height:330px;
 	padding: 10px 12px 0px 6px;
 	background:#82c3a6;
-	
-	
-	
 	}
 picture img1{
 align-items: center;
@@ -95,13 +95,11 @@ align-items: center;
 }
 
 .contenido{
-	width: 100%;
-	height: 500px;
-	/*display: flex;*/
-	flex-direction:column;!important
-	margin: 0px  ;
+	width:900px;
+	display: flex;
+	margin: auto;
 	padding: 10px 0px ;
-	background-color:#d5c75f ;
+	background-color:#d5c75f;
 }
 .contenido img{
 	border: 1px solid black;
@@ -114,9 +112,10 @@ align-items: center;
 }
 
 #img2{
+	margin: auto;
 	float:left;
 	position: relative;
-	left:10px;	
+	
    
 }
 #img2 a img:hover {
@@ -125,9 +124,10 @@ align-items: center;
 	border: 2px solid black;
 }
 #img3 {
+	margin: auto;
 	float:right;
 	position:relative;
-	right:11px;
+	
 }
 
  #img3 a img:hover {
@@ -139,37 +139,37 @@ align-items: center;
 /*fin pagina inicio*/
 /*galeria pagina paisajes*/
 
+
+
 .galeria{
-	width: 100%;
+	width:900px;
 	display: flex;
-	flex-direction: row;
-	margin: 0px;
-	padding: 0px 0px;
+	margin:auto;
 	background-color: #d5c75f;
-	color: black;	
-}
-div [class*="galeria"]{
-  flex: 3 2 25%;
-}
-.galeria div{
-	object-position: center;
-	padding: 10px;
-    margin: 25px;
-    border: none;
-	
-	
+	color: black;
 	
 }
+.galeria h2{
+	width: auto;
+}
+
+.galeria picture{
+	margin: auto;
+	flex-wrap: wrap;
+	/*flex-flow: row wrap;*/
+	width: 30%;
 	
-.galeria img{
+}
+.galeria picture img{
 	width: 100%;
-
 }
 
 
+/*fin pagina paisages*/
 footer{
-	width:100%;
+	width:900px;
 	height:auto;
+	margin: auto;
 	background-color:#C6d5c5;
 	border-radius: 0px 0px 10px 10px;
 	display:flex;
