mas redes  zoosiales

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -205,9 +205,9 @@ footer  a{
 
 
 
-footer #redes p img{
+footer p img{
 	margin-right:6px; 
-	width:15px;
+	width:25px;
 	
 }
 footer #redes p img:hover{
